--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Testing.</title>
+  <title>Val's site</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-<p>This is a test.</p>
+
+
+<body style="background-color: white;">
+<div class="bar">
+	<div style="margin-left: auto; margin-right: auto; width:1032px;">
+	 <img src="barimage.png"style="width:1032px;height:224px">
+	 </div>
+</div>
+  <div class="nav">
+      <div class="container">
+	  <div class="btn">
+        <ul>
+         <li><a href="index.html">Home</a></li>          
+		  <li><a href="projects.html">Projects</a></li>
+		  <li><a href="education.html">Education</a></li>
+		  <li><a href="contact.html">Contact</a></li>
+        </ul>
+       </div>
+      </div>
+    </div>
+  <div id="header">
+	<div style="margin-left: auto; margin-right: auto; width: 800px;">
+		<h1>Heja,</h1>
+		<p style="text-align: center;">Thank you for coming. It's cool that you're here!</p>
+		<p style="text-align: center;">I am Valerie, an enthusiast from Ukraine living and studying in Lithuania. This is a webpage where you can learn about cool <a href="#">projects</a> and <a href="#">opportunities</a> through my experience. Have a great journey!</p></p>
+		<p style="text-align: center;"> I also write a little, so you you enjoyed this page you mey also be intereted in checking out my <a href="http://schastplace.blogspot.com/">blog</a>.
+		<br>
+		<img src="intro.png"style="width:800px;height:auto; float:center;">
+
+
+
+  </div>
 </body>
 </html>
