--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<h1>Heja,</h1>
 		<p style="text-align: center;">Thank you for coming. It's cool that you're here!</p>
 		<p style="text-align: center;">I am Valerie, young activist from Ukraine living and studying in Lithuania. This is a webpage where you can learn about cool <a href="#">projects</a> and <a href="#">opportunities</a> through my experience. Have a great journey!</p></p>
-		<p style="text-align: center;"> I also write a little, so you you enjoyed this page you mey also be intereted in checking out my <a href="http://schastplace.blogspot.com/">blog</a>.
+		<p style="text-align: center;"> I also write a little so you you enjoyed this page you mey also be intereted in checking out my <a href="http://schastplace.blogspot.com/">blog</a>.
 		<br>
 		<img src="intro.png"style="width:800px;height:auto; float:center;">
 
