--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 	<div style="margin-left: auto; margin-right: auto; width: 800px;">
 		<h1>Contact</h1>
 		<h3>Feel free to get in touch with me:</h3>
-		<p style="text-align: center;">Email: nld.valerie@gmail.com
-		hr@eyp-ua.org
-		Modile: 38095-192-22-25</p>
+		<p style="text-align: center;">Email: xxxxxxxx@gmail.com
+		
+		Modile: 38095-xx-xx-xx</p>
 		
 		<br>
 		
